--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -91,8 +91,7 @@
     width: 100%;
     position: sticky;
     top: 0.625rem;
-    z-index: 10;
-    /* padding: 0rem 1.25rem 0rem 1.25rem; */
+    z-index: 1;
 }
 
 .mood_select_box {
@@ -135,6 +134,8 @@
 
 /* 가운데 일기와 일기 쓰기 컨텐츠 */
 .contents {
+    position: relative;
+
     display: flex;
     gap: 1.5rem;
 }
@@ -251,21 +252,40 @@
     color: black;
 }
 
-/* 가운데 내용의 오른쪽 "일기 쓰기" 아이템 배치 */
-.contents_right_item {
-    width: 22.5rem;
-    height: 37.75rem;
+.write_diary_modal_bg {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    background-color: #00000080;
+
+    z-index: 2;
+}
+
+/* 일기쓰기 버튼 클릭 시 생성되는 모달 */
+.write_diary_modal_container {
+    width: 40rem;
     padding: 1.5rem;
 
-    border: 0.063rem solid #D4D3D3;
+    position: absolute;
+    top: calc(50% - 40rem/2);
+    left: calc(50% - 35rem/2);
+
+    background-color: white;
+
     border-radius: 1rem;
 
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+
+    z-index: 3;
 }
 
-.write_title {
+.write_diary_title {
     width: 100%;
     font-weight: 700;
     font-size: 1.5rem;
@@ -282,15 +302,14 @@
     gap: 2.5rem;
 }
 
-.write_mood_select {
+.write_diary_mood_items {
     width: 100%;
-    height: 6.75rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.write_mood_select_title {
+.write_diary_mood_title {
     width: 100%;
     height: 1.5rem;
 
@@ -300,18 +319,13 @@
     font-size: 1.25rem;
 }
 
-.write_mood_select_buttonList {
-    width: 19.75rem;
-    height: 4.25rem;
-
+.write_diary_mood_buttonList {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     gap: 1.25rem;
 }
 
 .write_mood_select_button {
-    width: 5.875rem;
     height: 1.5rem;
 
     display: flex;
@@ -334,31 +348,27 @@
     gap: 1.5rem;
 }
 
-.diary_title_input {
-    width: 100%;
-    height: 4.75rem;
+.write_diary_contents {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
 
+.write_diary_contents_items {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.diary_text_input {
-    width: 100%;
-    height: 9.75rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.diary_title_input_title {
+.write_diary_contents_title {
     width: 100%;
     font-weight: 500;
     font-size: 0.875rem;
     color: #333333;
 }
 
-.diary_title_input_text {
+.write_diary_title_input {
     width: 100%;
     height: 3rem;
     border: 0.063rem solid #D4D3D3;
@@ -366,7 +376,7 @@
     padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
-.diary_title_input_textarea {
+.write_diary_text_input {
     width: 100%;
     height: 8rem;
     border: 0.063rem solid #D4D3D3;
@@ -374,7 +384,24 @@
     padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
-.diary_write_button {
+.write_diary_footer_items {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.write_diary_cancel_button {
+    background-color: white;
+    font-weight: 600;
+    font-size: 1.125rem;
+    color: #1C1C1C;
+    border: .0625rem solid black;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+
+}
+
+.write_diary_button {
     background-color: #C7C7C7;
     font-weight: 600;
     font-size: 1.125rem;
