--- a/style/dailyDetailInforStyle.css
+++ b/style/dailyDetailInforStyle.css
@@ -296,4 +296,8 @@ footer {
     .header-mobile {
         display: flex;
     }
+    footer {
+        width: 90dvw;
+        height: 44px;
+    }
 }
