--- a/section05/css/detail.css
+++ b/section05/css/detail.css
@@ -10,7 +10,7 @@
 }
 
 .detail-title h2 {
-  font-size: 22px;
+  font-size: 2.2rem;
   font-weight: var(--weight-bold);
 }
 
@@ -32,17 +32,17 @@
 }
 
 .detail-emotion .badge-emoticon {
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 .detail-date {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: var(--weight-regular);
   color: var(--gray-500);
 }
 
 .detail-content {
-  font-size: 16px;
+  font-size: 1.6rem;
   padding-bottom: var(--gap-lg);
 }
 
@@ -53,9 +53,23 @@
 .detail-content-text p {
   font-weight: var(--weight-medium);
   margin-top: var(--gap-xs);
-  line-height: 3rem;
+  line-height: 2.5rem;
   word-break: break-all;
   white-space: wrap;
+}
+
+.button-copy {
+  display: flex;
+  gap: var(--gap-xxs);
+  padding: var(--gap-xxs);
+  align-items: center;
+  margin-left: auto;
+  min-width: 65px;
+  height: 24px;
+  font-size: 1.6rem;
+  font-weight: var(--weight-regular);
+  background-color: var(--gray-w);
+  border: none;
 }
 
 .actions {
@@ -74,12 +88,6 @@
   text-align: center;
   color: var(--gray-900);
   background-color: var(--gray-w);
-  font-size: 18px;
+  font-size: 1.6rem;
   font-weight: var(--weight-medium);
-}
-
-.button-copy {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
 }
