--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -390,7 +390,7 @@
     gap: 10px;
 }
 
-.write_diary_cancel_button {
+.write_diary_closed_button {
     background-color: white;
     font-weight: 600;
     font-size: 1.125rem;
@@ -409,6 +409,97 @@
     border: none;
     border-radius: 0.5rem;
     padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+}
+
+/* Cancel Modal */
+
+.write_diary_cancel_modal_bg {
+    width: 40rem;
+    height: 100%;
+
+    border-radius: 1rem;
+    background-color: #00000080;
+
+    display: none;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+}
+
+.write_diary_cancel_modal_container {
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    gap: 2.5rem;
+    border-radius: 1.5rem;
+    padding: 1.5rem;
+    background-color: #FFFFFF;
+
+    position: absolute;
+    top: calc(50% - 15rem/2);
+    left: calc(50% - 30rem/2);
+    z-index: 5;
+}
+
+.write_diary_cancel_modal_title_items {
+    width: 27rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.write_diary_cancel_title {
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-align: center;
+
+    color: #000000;
+}
+
+.write_diary_cancel_text {
+    font-weight: 500;
+    font-size: 1.25rem;
+    text-align: center;
+
+    color: #333333;
+}
+
+.write_diary_cancel_modal_button_items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 1.3125rem;
+}
+
+.write_diary_cancel_button_items {
+    display: flex;
+    gap: 1.3125rem;
+}
+
+.write_diary_continue_button {
+    /* width: 6.5rem; */
+    background-color: #FFFFFF;
+    border: 0.0625rem solid #000000;
+    border-radius: 0.5rem;
+
+    padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+
+    font-weight: 600;
+    font-size: 1.125rem;
+}
+
+.write_diary_cancel_button {
+    border-radius: 0.5rem;
+    background-color: #000000;
+    color: #F2F2F2;
+
+    padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+
+    font-weight: 600;
+    font-size: 1.125rem;
 }
 
 .top_scroll_floating_button {
