--- a/homework/detail.css
+++ b/homework/detail.css
@@ -97,6 +97,76 @@
   gap: 12px;
 }
 
+.CSS_내용복사영역 {
+  width: 100%;
+  display: flex;
+  gap: 4px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#CSS_삭제확인모달그룹 {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+#CSS_삭제확인모달 {
+  width: 480px;
+  height: 240px;
+  padding: 24px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  border-radius: 24px;
+  background: #FFF;
+
+  position: absolute;
+  left: calc(50% - 480px/2);
+  top: calc(50% - 200px/2);
+  z-index: 4;
+}
+
+#CSS_삭제확인모달_헤더 {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+#CSS_삭제확인모달배경 {
+  background: rgba(0, 0, 0, 0.50);
+  width: 100vw;
+  height: 100vh;
+}
+
+#CSS_삭제확인모달_푸터 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#CSS_삭제확인모달확인_버튼영역 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+#CSS_모달취소버튼,
+#CSS_모달삭제버튼 {
+  width: 8rem;
+  height: 2rem;
+  background-color: #000;
+  color: white;
+  border-radius: 8px;
+}
+
 #section-footer {
   display: flex;
   width: 100%;
