--- a/homework/index.css
+++ b/homework/index.css
@@ -58,17 +58,17 @@ a {
 
 .mood-selection-wrapper {
   /* max-width: 1168px; */
-  width: 100%;
+  /* width: 100%; */
   border: 2px solid crimson;
   
-  display: flex;
+  /* display: flex; */
   align-items: flex-start;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   
-  position: sticky;
+  /* position: sticky;
   left: 0;
   top: 5px;
-  z-index: 10;
+  z-index: 10; */
 }
 
 select#mood-selection {
@@ -94,6 +94,30 @@ select#mood-selection {
   font-weight: 500;
 }
 
+.CSS_필터와일기등록버튼 {
+  border: 2px solid blue;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 40px;
+  position: sticky;
+  left: 0;
+  top: 5px;
+  z-index: 10;
+}
+
+.CSS_필터와일기등록버튼 #HTML_일기등록버튼 {
+  display: flex;
+  border-radius: 8px;
+  width: 110px;
+  height: 36px;
+  background-color: black;
+  color: white;
+  justify-content: space-evenly;
+  align-items: center;
+  line-height: 36px
+}
+
 .main {
   border: 2px solid yellowgreen;
   width: 100%;
@@ -101,7 +125,6 @@ select#mood-selection {
   display: flex;
   gap: 24px;
   position: relative;
-  margin-bottom: 40px;
 }
 
 #topScroller-area {
@@ -242,19 +265,121 @@ select#mood-selection {
   font-weight: 700;
 }
 
-#dairy-generator {
-  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
-  
-  width: 360px;
-  height: fit-content;
+#CSS_등록완료모달그룹 {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+#CSS_등록완료모달 {
+  width: 480px;
+  height: 240px;
   padding: 24px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 40px;
+  border-radius: 24px;
+  background: #FFF;
+
+  position: absolute;
+  left: calc(50% - 480px/2);
+  top: calc(50% - 240px/2);
+  z-index: 4;
+}
+
+#CSS_등록완료모달_헤더 {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+#CSS_등록완료모달배경 {
+  background: rgba(0, 0, 0, 0.50);
+  width: 100vw;
+  height: 100vh;
+}
+
+#CSS_등록완료모달확인_버튼영역 button {
+  display: flex;
+  width: 420px;
+  height: 48px;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  border-radius: 8px;
+  background-color:#000;
+  color: white;
+}
+
+#div__dairy_generator_modal__group {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+#div__modal_background {
+  background-color: lightgray;
+  width: 100vw;
+  height: 100vh;
+  opacity: 90%;
+}
+
+#generator-footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+#button__gen_dairy__close_btn{
+  width: 104px;
+  height: 48px;
+  padding: 8px 10px;
+  border-radius: 8px;
+  background-color: #FFF;
+}
+
+#button_gen_dairy__register_btn {
+  width: 104px;
+  height: 48px;
+  padding: 8px 10px;
+  border-radius: 8px;
+  background: #C7C7C7;
+  color: #F2F2F2;
+  border-radius: 8px;
+}
+
+
+
+#dairy-generator {
+  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+  
+  min-width: 22.5rem;
+  max-width: 47.5rem;
+  padding: 24px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 55px;
   border-radius: 16px;
   background: #FFF;
+
+  position: absolute;
+  left: calc(50% - 640px/2);
+  top: calc(50% - 500px/2);
+  z-index: 2;
 }
 
 #generator-header {
@@ -355,31 +480,6 @@ select#mood-selection {
   background: var(--Gray-W, #FFF);
 }
 
-#generator-footer {
-  width: 100%;
-}
-
-#gen-dairy-btn {
-  width: 100%;
-  height: 48px;
-  padding: 8px 10px;
-  border: none;
-  border-radius: 8px;
-  background: var(--Gray-Gray-300, #C7C7C7);
-  color: var(--Gray-Gray-50, #F2F2F2);
-  font-family: "Pretendard Variable";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 100%;
-}
-
-#gen-dairy-btn:hover {
-  border: 2px solid skyblue;
-  background-color: #333;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
 @media (max-width: 779px) {
   /* .diary {
     width: calc(50% - 12px);
@@ -399,9 +499,9 @@ select#mood-selection {
     width: 100%;
     order: 1;
   }
-  .mood-selection-wrapper {
+  /* .mood-selection-wrapper {
     order: 2;
-  }
+  } */
   #dairy-list {
     order: 3;
   }
@@ -425,3 +525,4 @@ select#mood-selection {
   flex-direction: column;
   gap: 32px;
 }
+
