feat: 다이어리 상세 페이지에서 삭제 버튼 클릭시, 삭제 확인 모달 기능 추가

--- a/다이어리/diary-detail.css
+++ b/다이어리/diary-detail.css
@@ -367,6 +367,98 @@ html {
   opacity: 0%;
 }
 
+.confirm_delete_diary_modal_layout {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 900;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.confirm_delete_diary_modal {
+  display: flex;
+  width: 30rem;
+  min-width: 30rem;
+  max-width: 47.5rem;
+  padding: 1.5rem;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+  border-radius: 1.5rem;
+  background: #fff;
+  color: #000;
+  text-align: center;
+}
+
+.delete_diary_modal_title {
+  color: #000;
+  text-align: center;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: -0.015rem;
+}
+
+.delete_diary_modal_content {
+  color: var(--Gray-Gray-800, #333);
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: -0.013rem;
+}
+
+.delete_diary_modal_button_group {
+  display: flex;
+  gap: 1.313rem;
+}
+
+.delete_diary_cancel_btn {
+  display: flex;
+  width: 6.5rem;
+  height: 3rem;
+  padding: 0.5rem 0.625rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  border-radius: 0.5rem;
+  border: 0.063rem solid var(--Gray-B, #000);
+  background: var(--Gray-W, #fff);
+  color: var(--Gray-Gray-900, #1c1c1c);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: -0.011rem;
+}
+
+.delete_diary_btn {
+  display: flex;
+  width: 6.5rem;
+  height: 3rem;
+  padding: 0.5rem 0.625rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  border-radius: 0.5rem;
+  background: var(--Gray-B, #000);
+  color: var(--Gray-Gray-50, #f2f2f2);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: -0.011rem;
+}
+
 @keyframes animation {
         from {
           opacity: 0%;
