--- a/scss/comment.scss
+++ b/scss/comment.scss
@@ -21,6 +21,12 @@
     display: flex;
     flex-direction: column;
 
+    .empty {
+      text-align: center;
+      padding: 40px 0;
+      color: var(--font-color-7);
+    }
+
     ul {
       li {
         display: flex;
