--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -91,3 +91,32 @@
     height: 1.5rem; // 24px
   }
 }
+
+.fadeOutAlert {
+  position: fixed;
+  left: calc(50% - 80vw / 2);
+  bottom: 2.5rem;
+  width: 80vw;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  font-size: var(--font-size-2);
+
+  &.fadeOut {
+    animation: fadeOut 3s forwards;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
