--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -411,9 +411,8 @@
     padding: 0.5rem 0.625rem 0.5rem 0.625rem;
 }
 
-/* Cancel Modal */
-
-.write_diary_cancel_modal_bg {
+/* Modal */
+.write_diary_select_modal_bg {
     width: 40rem;
     height: 100%;
 
@@ -428,7 +427,7 @@
     z-index: 4;
 }
 
-.write_diary_cancel_modal_container {
+.write_diary_select_modal_container {
     width: 30rem;
     display: flex;
     flex-direction: column;
@@ -444,13 +443,22 @@
     z-index: 5;
 }
 
-.write_diary_cancel_modal_title_items {
+.write_diary_modal_title_items {
     width: 27rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
+/* Success Modal */
+.write_diary_ok_button {
+    border-radius: 0.5rem;
+    background-color: #000000;
+    color: #F2F2F2;
+    padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+}
+
+/* Cancel Modal */
 .write_diary_cancel_title {
     font-weight: 700;
     font-size: 1.5rem;
