--- a/css/media.css
+++ b/css/media.css
@@ -36,14 +36,31 @@
     background-color: #f2f2f2;
     border-radius: 8px;
   }
+  .popup {
+    padding: 20px;
+  }
+  .popup .popupInner {
+    height: 80vh;
+    overflow-y: auto;
+  }
   .diaryWrite {
-    order: -1;
     max-width: 100%;
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .diaryWrite .diaryWriteInner {
+    gap: 20px;
+    overflow-y: scroll;
   }
   .navBottom {
+    flex-wrap: wrap;
+    justify-content: flex-end;
     width: 100%;
     padding: 0;
+    gap: 12px;
   }
   .navBottom .filterSearchBox .selectBox,
   .navBottom .filterSearchBox .searchBox {
@@ -64,13 +81,13 @@
   .detailHeaderTop {
     padding: 0 20px;
   }
-  .detailWrap,
-  .editWrap .diaryWrite {
-    padding-top: 2.5rem;
-    padding-bottom: 1rem;
-    border-radius: 0;
-  }
   .detailWrap h2 {
+    font-size: 1rem;
+  }
+  .detailWrap h3 {
+    font-size: 1.25rem;
+  }
+  .diaryWrite .moodTypeRadio span {
     font-size: 1rem;
   }
   .detailWrap .buttonWrap {
@@ -91,8 +108,8 @@
     padding: 0 20px;
     bottom: 40px;
   }
-  .editWrap .diaryWrite .diaryContent input,
-  .editWrap .diaryWrite .buttonBox button,
+  .diaryWrite .diaryContent input,
+  .diaryWrite .buttonBox button,
   .commentWrap .commentInputWrap #commentInput {
     height: 40px;
   }
@@ -118,6 +135,15 @@
 @media (max-width: 480px) {
   .headerBanner img {
     transform: none;
+  }
+  .diaryWrite {
+    gap: 24px;
+  }
+  .navBottom.stickyAddStyle {
+    justify-content: space-between;
+  }
+  .navBottom.stickyAddStyle .filterSearchBox {
+    width: auto;
   }
   .navBottom .filterSearchBox {
     width: 100%;
@@ -147,5 +173,28 @@
   }
   .navBottom .filterSearchBox .searchMobilePopBtn.active {
     background-color: var(--bg-color-1);
+  }
+  .navBottom.stickyAddStyle .searchMobilePopBtn {
+    display: none;
+  }
+  .diaryWrite .moodTypeRadio .radioWrap {
+    padding: 0 2px;
+    flex-direction: column;
+  }
+  .diaryWrite .diaryContent {
+    gap: 16px;
+  }
+  .diaryWrite .moodTypeRadio span {
+    font-size: 20px;
+  }
+  .diaryWrite .moodTypeRadio .radioWrap label {
+    font-size: 16px;
+  }
+  .diaryWrite .buttonWrap button {
+    height: 40px;
+    font-size: 16px;
+  }
+  .popup.alert .popupInner {
+    height: auto;
   }
 }/*# sourceMappingURL=media.css.map */
