--- a/scss/media.scss
+++ b/scss/media.scss
@@ -47,19 +47,36 @@
     }
   }
 
+  .popup {
+    padding: 20px;
+    .popupInner {
+      height: 80vh;
+      overflow-y: auto;
+    }
+  }
+
   .diaryWrite {
-    order: -1;
     max-width: 100%;
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .diaryWriteInner {
+      gap: 20px;
+      overflow-y: scroll;
+    }
   }
 
   .navBottom {
+    flex-wrap: wrap;
+    justify-content: flex-end;
     width: 100%;
     padding: 0;
-    .filterSearchBox {
-      // display: grid;
-      // grid-template-columns: 1fr 3fr;
+    gap: 12px;
 
+    .filterSearchBox {
       .selectBox,
       .searchBox {
         width: auto;
@@ -85,16 +102,19 @@
     padding: 0 20px;
   }
 
-  .detailWrap,
-  .editWrap .diaryWrite {
-    padding-top: 2.5rem;
-    padding-bottom: 1rem;
-    border-radius: 0;
+  .detailWrap {
+    h2 {
+      font-size: 1rem; // 16px
+    }
+    h3 {
+      font-size: 1.25rem; // 20px
+    }
   }
 
-  .detailWrap h2 {
-    font-size: 1rem;
+  .diaryWrite .moodTypeRadio span {
+    font-size: 1rem; // 16px
   }
+
   .detailWrap .buttonWrap {
     gap: 0.375rem;
   }
@@ -118,8 +138,8 @@
     bottom: 40px;
   }
 
-  .editWrap .diaryWrite .diaryContent input,
-  .editWrap .diaryWrite .buttonBox button,
+  .diaryWrite .diaryContent input,
+  .diaryWrite .buttonBox button,
   .commentWrap .commentInputWrap #commentInput {
     height: 40px;
   }
@@ -154,6 +174,17 @@
     }
   }
 
+  .diaryWrite {
+    gap: 24px;
+  }
+
+  .navBottom.stickyAddStyle {
+    justify-content: space-between;
+    .filterSearchBox {
+      width: auto;
+    }
+  }
+
   .navBottom .filterSearchBox {
     width: 100%;
     justify-content: space-between;
@@ -169,7 +200,6 @@
         transition: height 0.5s;
       }
     }
-
     .searchMobilePopBtn {
       width: 48px;
       height: 48px;
@@ -185,5 +215,33 @@
         background-color: var(--bg-color-1);
       }
     }
+  }
+  .navBottom.stickyAddStyle .searchMobilePopBtn {
+    display: none;
+  }
+
+  .diaryWrite .moodTypeRadio .radioWrap {
+    padding: 0 2px;
+    flex-direction: column;
+  }
+
+  .diaryWrite .diaryContent {
+    gap: 16px;
+  }
+
+  .diaryWrite .moodTypeRadio span {
+    font-size: 20px;
+  }
+  .diaryWrite .moodTypeRadio .radioWrap label {
+    font-size: 16px;
+  }
+
+  .diaryWrite .buttonWrap button {
+    height: 40px;
+    font-size: 16px;
+  }
+
+  .popup.alert .popupInner {
+    height: auto;
   }
 }
