--- a/css/comment.css
+++ b/css/comment.css
@@ -20,6 +20,11 @@
   display: flex;
   flex-direction: column;
 }
+.commentWrap .commentList .empty {
+  text-align: center;
+  padding: 40px 0;
+  color: var(--font-color-7);
+}
 .commentWrap .commentList ul li {
   display: flex;
   gap: 12px;
