--- a/styles/diaryDetail.css
+++ b/styles/diaryDetail.css
@@ -345,8 +345,70 @@ textarea {
   left: 90vw;
 }
 
+#modal_depth1 {
+  position: fixed;
+  display: none;
+
+  width: 100vw;
+  height: 100vh;
+
+  overflow: hidden;
+
+  top: 0;
+  left: 0;
+  z-index: 998;
+  background-color: #00000080;
+}
+
+#modal_remove_list {
+  position: fixed;
+  display: none;
+
+  z-index: 9999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 480px;
+  max-width: 760px;
+  width: 100%;
+
+  padding: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  border-radius: 16px;
+
+  background-color: white;
+}
+
+#modal_remove_list h4 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+#modal_remove_list button {
+  min-width: 104px;
+  height: 48px;
+  padding: 8px 10px;
+  border-radius: 8px;
+  margin-top: 2.5rem;
+  background-color: black;
+  color: white;
+}
+
+.buttons_box {
+  display: flex;
+  gap: 1rem;
+}
+.buttons_box .first_button {
+  background-color: white !important;
+  border: 1px solid black !important;
+  color: black !important;
+}
+
 .copy_text {
-  /* display: none; */
+  display: none;
   position: fixed;
   bottom: 10px;
   left: 50%;
