--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -614,12 +614,15 @@ ul li {
   }
   .aside {
     order: 1;
+    height: 30rem;
+    overflow-y: scroll;
   }
   .article {
     order: 3;
   }
   .diary_cover {
-    width: 100%;
+    width: 9.25rem;
+    height: 17.813rem;
     object-fit: cover;
   }
   .navigation_layout {
@@ -635,6 +638,18 @@ ul li {
     display: flex;
     flex-direction: column;
     align-items: start;
+    gap: 0.75rem;
+  }
+  .diary_entry_container {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
+    align-self: stretch;
+    flex-wrap: wrap;
+  }
+  .confirm_modal {
+    max-width: 20rem;
   }
 }
 @media (max-width: 30rem) {
@@ -668,8 +683,6 @@ ul li {
 .confirm_modal {
   display: flex;
   width: 30rem;
-  min-width: 30rem;
-  max-width: 47.5rem;
   padding: 1.5rem;
   flex-direction: column;
   align-items: center;
