--- a/homework/diary.css
+++ b/homework/diary.css
@@ -76,8 +76,10 @@
 }
 
 .selectbox {
-    width: 73rem; /* 1168px -> 73rem */
+    width: 70.5rem; /* 1168px -> 73rem */
     height: 2rem; /* 32px -> 2rem */
+    display: flex;
+    justify-content: space-between;
 
 }
 
@@ -139,15 +141,13 @@ select {
 }
 
 .diarylistbox {
+    grid-template-columns: 1fr 1fr 1fr;
     display: flex;         
     flex-wrap: wrap;       /* 줄 바꿈 허용 */
     gap: 1.5rem;           /* 24px -> 1.5rem */
     width: 100%;           /* 전체 너비를 사용 */
     box-sizing: border-box; /* 패딩 및 보더를 포함하여 너비 조정 */
-    width: 784px;
-
-    box-sizing: border-box;
-    margin-right: 24px;
+    width: 1168px;
 }
 
 
@@ -296,8 +296,8 @@ select {
 
 
 .diarybox {
-    width: 23.75rem; /* 380px */
-    height: 23.3125rem; /* 373px */
+    width: 17.125rem; /* 380px */
+    height: 18.5rem; /* 373px */
     padding-bottom: 1rem; /* 16px */
     position: relative;
     overflow: visible;
@@ -314,44 +314,44 @@ select {
     transition-duration: 0.5s;
   }
 .thumbnail_sad{
-    width: 23.75rem; /* 380px */
-    height: 17.8125rem; /* 285px */
+    width: 17.125rem; /* 380px */
+    height: 13rem; /* 285px */
     background-image: url("./img/sad.png");
     background-size: cover;
     margin-bottom: 16px;
 }
 
 .thumbnail_surprise{
-    width: 23.75rem; /* 380px */
-    height: 17.8125rem; /* 285px */
+    width: 17.125rem;; /* 380px */
+    height: 13rem; /* 285px */
     background-image: url("./img/surprise.png");
     background-size: cover;
     margin-bottom: 16px;
 
 }
 .thumbnail_angry{
-    width: 23.75rem; /* 380px */
-    height: 17.8125rem; /* 285px */
+    width: 17.125rem;; /* 380px */
+    height: 13rem; /* 285px */
     background-image: url("./img/angry.png");
     background-size: cover;
     margin-bottom: 16px;
 }
 .thumbnail_happy{
-    width: 23.75rem; /* 380px */
-    height: 17.8125rem; /* 285px */
+    width: 17.125rem; /* 380px */
+    height: 13rem; /* 285px */
     background-image: url("./img/happy.png");
     background-size: cover;
     margin-bottom: 16px;
 }
 .thumbnail_etc{
-    width: 23.75rem; /* 380px */
-    height: 17.8125rem; /* 285px */
+    width: 17.125rem; /* 380px */
+    height: 13rem; /* 285px */
     background-image: url("./img/etc.png");
     background-size: cover;
     margin-bottom: 16px;
 }
 .textbox {
-    width: 23.75rem; /* 380px */
+    width: 17.125rem; /* 380px */
     height: 3.5rem; /* 56px */
     padding-left: 0.5rem; /* 8px */
     padding-right: 0.5rem; /* 8px */
@@ -484,6 +484,386 @@ select {
     bottom: 0.625rem; /* 10px -> 0.625rem */
     left: 4.875rem; /* 78%의 경우, 일반적으로 rem 단위로는 변환이 어려우므로, 원래 값을 그대로 사용하거나 필요한 경우 다른 방식으로 변환할 수 있음 */
 }
+
+
+
+
+
+
+/* --------------------------------------- */
+.writebutton{
+    display: flex;
+    width: 110px;
+    height: 48px;
+    padding: 8px 10px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    background: var(--Gray-B, #000);
+}
+.witerbuttontext {
+    color: var(--Gray-W, #FFF);
+    font-family: "Pretendard Variable";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.2px;
+}
+.modalcontainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.modalbackground {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5); /* 배경 투명도 설정 */
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.modal {
+    position: absolute;
+    top: calc(50% - 540px/2); /*어디서 그리기 시작하는 포인트가 핵심*/
+    left: calc(50% - 640px/2);
+    width: 640px;
+    height: 560px;
+    background-color: white;
+    z-index: 1001;
+
+    padding: 24px;
+
+    display: flex;
+    width: 640px;
+    min-width: 640px;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    border-radius: 24px;
+    background: #FFF;   
+}
+
+.text1 {
+    width: 592px;
+    height: 24px;
+    color: #000;
+    font-family: "Pretendard Variable";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 100% */
+    letter-spacing: -0.24px;
+}
+.text2 {
+    width: 592px;
+    height: 24px;
+    color: #000;
+    font-family: "Pretendard Variable";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 120% */
+    letter-spacing: -0.2px;
+
+    margin-bottom: 16px;
+}
+.radioboxInModal {
+    display: flex;
+    gap: 20px;
+}
+.titleInModal {
+    width: 592px;
+    height: 20px;
+    color: var(--Gray-Gray-800, #333);
+    font-family: "Pretendard Variable";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: -0.14px;
+
+    margin-bottom: 8px;
+}
+.titleInputModal {
+    width: 592px;
+    height: 48px;
+    display: flex;
+    padding: 12px 16px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+    background: var(--Gray-W, #FFF);
+    margin-bottom: 24px;
+}
+.titleInputModal::placeholder {
+    color: var(--Gray-Gray-400, #ABABAB);
+    font-family: "Pretendard Variable";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
+}
+.titleTextareaModal {
+    display: flex;
+    width: 592px;
+    height: 128px;
+    padding: 12px 16px;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+    background: var(--Gray-W, #FFF);
+    color: var(--Gray-Gray-400, #ABABAB);
+    font-family: "Pretendard Variable";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
+    resize: none;
+}
+.titleTextareaModal::placeholder {
+    color: var(--Gray-Gray-400, #ABABAB);
+    font-family: "Pretendard Variable";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
+}
+.closeButton {
+    display: flex;
+    width: 104px;
+    height: 48px;
+    padding: 8px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px solid var(--Gray-B, #000);
+    background: var(--Gray-W, #FFF);
+}
+.closeButtonText {
+    color: var(--Gray-Gray-900, #1C1C1C);
+    font-family: "Pretendard Variable";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.18px;
+}
+.confirmButton {
+    display: flex;
+    width: 104px;
+    height: 48px;
+    padding: 8px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: var(--Gray-Gray-300, #C7C7C7);
+}
+.confirmButtonText {
+    color: var(--Gray-Gray-50, #F2F2F2);
+    font-family: "Pretendard Variable";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.18px;
+}
+.modalButtonContainer {
+    display: flex;
+    gap: 16px;
+}
+
+
+.completionModalContainer{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+.completeModalbackground {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5); /* 배경 투명도 설정 */
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+.completionModal {
+    display: flex;
+    height: 200px;
+    width: 480px;
+    padding: 24px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 24px;
+    background: #FFF;
+
+    position: absolute;
+    top: calc(50% - 200px/2); /*어디서 그리기 시작하는 포인트가 핵심*/
+    left: calc(50% - 480px/2);
+    background-color: white;
+    z-index: 1004;
+    padding: 24px;
+}
+.text3 {
+    color: #000;
+
+    text-align: center;
+    font-family: "Pretendard Variable";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 100% */
+    letter-spacing: -0.24px;
+    margin-bottom: 16px;
+}
+.text4 {
+    color: var(--Gray-Gray-800, #333);
+    text-align: center;
+    font-family: "Pretendard Variable";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 120% */
+    letter-spacing: -0.2px;
+    margin-bottom: 40px;
+}
+.completionModalButton {
+    display: flex;
+    width: 432px;
+    height: 48px;
+    padding: 8px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    background: var(--Gray-B, #000);
+}
+.completionModalText {
+    color: var(--Gray-W, #FFF);
+    font-family: "Pretendard Variable";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.18px;
+}
+
+.closeModalContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+.closeModalbackground {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5); /* 배경 투명도 설정 */
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+.closeModal {
+    display: flex;
+    height: 200px;
+    width: 480px;
+    padding: 24px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 24px;
+    background: #FFF;
+
+    position: absolute;
+    top: calc(50% - 200px/2); /*어디서 그리기 시작하는 포인트가 핵심*/
+    left: calc(50% - 480px/2);
+    background-color: white;
+    z-index: 1005;
+    padding: 24px;
+}
+.text5 {
+    color: #000;
+
+    text-align: center;
+    font-family: "Pretendard Variable";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 100% */
+    letter-spacing: -0.24px;
+    margin-bottom: 16px;
+}
+.text6 {
+    color: var(--Gray-Gray-800, #333);
+    text-align: center;
+    font-family: "Pretendard Variable";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 120% */
+    letter-spacing: -0.2px;
+    margin-bottom: 40px;
+}
+.cancellationButton {
+    display: flex;
+    width: 104px;
+    height: 48px;
+    padding: 8px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: var(--Gray-B, #000);
+}
+.keepWriteButton {
+    display: flex;
+    width: 104px;
+    height: 48px;
+    padding: 8px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px solid var(--Gray-B, #000);
+    background: var(--Gray-W, #FFF);
+}
+.keepWriteText{
+    color: var(--Gray-Gray-900, #1C1C1C);
+    font-family: "Pretendard Variable";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.18px;
+}
+.cancellationButtonText{
+    color: var(--Gray-Gray-50, #F2F2F2);
+    font-family: "Pretendard Variable";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.18px;
+}
+
 
 
 @media (max-width: 360px) { 
