--- a/homework/diary/edit.css
+++ b/homework/diary/edit.css
@@ -14,17 +14,84 @@ body {
     margin: 0 20px 40px;
 }
 
+.CSS_수정페이지메인 {
+    width: 1168px;
+}
+
 .CSS_배너제목 {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 16px; /* 88.889% */
+    letter-spacing: -0.18px;
     width: 100%;
     height: 60px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    padding: 20px 20px 20px 0;
+    margin: 0 0 60px 0;
 }
 
 .CSS_수정페이지_상세내용상자 {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 0 16px 0;
+    gap: 24px;
+}
+
+.CSS_오늘기분 {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: -0.01em;
+    text-align: left;
+}
+
+.CSS_수정하기페이지_라디오모음 {
+    width: 100%;
+}
+
+.CSS_제목 {
+    width: 100%;
+}
+
+.CSS_제목인풋 {
+    width: 100%;
+    padding: 12px 16px 12px 16px;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+}
+
+.CSS_내용 {
+    width: 100%;
+}
+
+.CSS_내용인풋 {
+    width: 100%;
+    padding: 12px 16px 12px 16px;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+}
+
+.CSS_수정하기페이지_버튼상자 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.CSS_수정하기 {
+    width: 51px;
+    height: 40px;
+    border-radius: 8px;
+    padding: 8px 10px;
+    gap: 10px;
 }
